[gd_scene load_steps=5 format=3 uid="uid://dc0jt36qm27rq"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_xsr4u"]
[ext_resource type="PackedScene" uid="uid://chkaq2yi4t8ht" path="res://Scenes/Conductor.tscn" id="2_jhfs7"]
[ext_resource type="AudioStream" uid="uid://cwrm8qwfokkw0" path="res://Sound/soft-hitnormal.wav" id="3_mp8xw"]
[ext_resource type="PackedScene" uid="uid://bqgyu67qg8580" path="res://Scenes/ArrowButton.tscn" id="5_tjads"]

[node name="Game" type="Node2D"]
top_level = true
script = ExtResource("1_xsr4u")

[node name="Conductor" parent="." instance=ExtResource("2_jhfs7")]
volume_db = -6.559

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mp8xw")
volume_db = -14.991

[node name="Timer" type="Timer" parent="."]
wait_time = 0.253
one_shot = true

[node name="UpArrow" parent="." instance=ExtResource("5_tjads")]
position = Vector2(320, 704)
scale = Vector2(4, 4)
input = "up"

[node name="LeftArrow" parent="." instance=ExtResource("5_tjads")]
position = Vector2(192, 704)
rotation = -1.57079
scale = Vector2(4, 4)
input = "left"

[node name="DownArrow" parent="." instance=ExtResource("5_tjads")]
position = Vector2(448, 704)
rotation = 3.14159
scale = Vector2(4, 4)
input = "down"

[node name="RightArrow" parent="." instance=ExtResource("5_tjads")]
position = Vector2(576, 704)
rotation = 1.57079
scale = Vector2(4, 4)
input = "right"

[connection signal="bar" from="Conductor" to="." method="_on_Conductor_bar"]
[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="notePressed" from="UpArrow" to="." method="_on_Note_Pressed"]
[connection signal="notePressed" from="LeftArrow" to="." method="_on_Note_Pressed"]
[connection signal="notePressed" from="DownArrow" to="." method="_on_Note_Pressed"]
[connection signal="notePressed" from="RightArrow" to="." method="_on_Note_Pressed"]
